Listo ejeplo de mapa para ir trackeando a mario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Kotlin Android Course</string>
+    <string name="title_activity_pokemon_game">Map</string>
 </resources>
