--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Kotlin Android Course</string>
     <string name="title_activity_pokemon_game">Map</string>
+    <string name="title_activity_pokemon_game_test">Map</string>
 </resources>
